--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en"><link type="text/css" rel="stylesheet" id="dark-mode-custom-link"><link type="text/css" rel="stylesheet" id="dark-mode-general-link"><style lang="en" type="text/css" id="dark-mode-custom-style"></style><style lang="en" type="text/css" id="dark-mode-native-style"></style><head>
-  <title>Eastland Crane Portfolio Website</title>
+  <title>Eastland Crane Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -20,7 +20,7 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1 style = "color:red;" width="100" height="100">Eastland's Education Webpage</h1>
+  <h1 style = "color:red;">Eastland's Education page</h1>
   <p>Double Major: Computer Science & History</p>
 </div>
 
@@ -32,10 +32,10 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Education</a>
+        <a class="nav-link active" href="index.html">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="HTMLPage2.html">Work Experience</a>
+        <a class="nav-link" href="HTMLPage2.html">Experience</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="HTMLPage3.html">Contact</a>
@@ -49,7 +49,7 @@
     <div class="col-sm-4">
       <h2>About Me</h2>
 
-      <img src="./img/IMG_2167.jpg" style="width:250px;height:250px" />
+      <img src="./img/IMG_2167.jpg" style="width:300px;height:400px" />
       <p>About Me: Originally I was a history major however, I discovered coding at the end of my last histroy semester and fell in love with it. So I decided to become a double major and pursued Computer Science.</p>
       <h3>Some Links</h3>
       <p>Lorem ipsum dolor sit ame.</p>
@@ -58,7 +58,7 @@
           <a class="nav-link active" href="index.html">Educaton</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="HTMLPage2.html">Work Experience</a>
+          <a class="nav-link" href="HTMLPage2.html">Experience</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="HTMLPage3.html">Contact</a>
@@ -74,19 +74,19 @@
       <img src="./img/bacs_code.jpg" style="width:800px;height:480px;" />
       
       <p>What I have studied: </p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>I have gone through extensive courses in: Assembly Language, Data Structures, Computer Architecture, Object-Oriented Design and Programming as well as Discrete Mathematic.</p>
       <br>
       <h2>History Major</h2>
-      <h5>Title description, Sep 2, 2017</h5>
+      
       <img src="./img/historymajor.jpg" style="width:800px;height:480px;" />
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>What I have studied: </p>
+      <p>I have taken courses covering western civilization from the 17th century as well as the Europian continent from the 18th century to date. All of this researching into history has also leaked into other aspects of my life. I have learned how to research effectively in order to teach myself certain things.</p>
     </div>
   </div>
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+  <p>Eastland Crane 2021</p>
 </div>
 
 
