--- a/HTMLPage2.html
+++ b/HTMLPage2.html
@@ -20,8 +20,7 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>Eastland's Work Experience</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <h1 style = "color:red;">Eastland's Experience page</h1>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -65,23 +64,33 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
+      <h2>Coding Skills & Concepts</h2>
+      <h4>Coding Languages: C++, JAVA, PYTHON, HTML 5, CSS</h4>
+      <img src="./img/Capture.PNG" style="width:800px;height:400px" />
+      <p>I have covered a multitude of concepts and skills in regards of coding such as: Object-Oriented Programming, a variety of sorting algorithms, 
+        recursion programming, nesting functions, etc.
+      </p>
       <a href = https://github.com/Ecrane0107?tab=repositories> Check out my github</a>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p></p>
       <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <h2>Job Experience</h2>
+      <h5>Irrigation Apprentice at Preston Wood Landscaping, Summer 2016</h5>
+      <p>Responsibilites: </p>
+      <p>- Installation of irrigation of systems, as well as individual branches.</p>
+      <p>- Repair and analyzation of irrigation of systems.</p>
+      <p>- Basic landscaping skills.</p>
+      <p></p>
+      <h5>Assistant Manager at Games2U San Antonio, 2014-15</h5>
+      <p>- Supervisor of games and rides. (Ex: rock climbing wall.) </p>
+      <p>- Teaching other co-workers the skills and knowledge to be a game coach.</p>
+      <p>- Knowledge of video games and how to set up a variety of rides and inflatable's.</p>
+
     </div>
   </div>
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+  <p>Eastlan Crane 2021</p>
 </div>
 
 
