--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
       <img src="./img/IMG_2167.jpg" style="width:300px;height:400px" />
       <p>About Me: Originally I was a history major however, I discovered coding at the end of my last histroy semester and fell in love with it. So I decided to become a double major and pursued Computer Science.</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
+      <h3>Page Links</h3>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Educaton</a>
