--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>About Me</h2>
 
       <img src="./img/IMG_2167.jpg" style="width:300px;height:400px" />
-      <p>About Me: Originally I was a history major however, I discovered coding at the end of my last histroy semester and fell in love with it. So I decided to become a double major and pursued Computer Science.</p>
+      <p>About Me: Originally I was a history major however, I discovered coding at the end of my last history semester and fell in love with it. So I decided to become a double major and pursued Computer Science.</p>
       <h3>Page Links</h3>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
